contact and good storage refresh

--- a/hiket/src/main/resources/application.properties
+++ b/hiket/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://rm-hp3cu2bv3w34t7o9i.mysql.huhehaote.rds.aliyuncs.com:3306/nku
-#spring.datasource.url=jdbc:mysql://rm-hp3cu2bv3w34t7o9iso.mysql.huhehaote.rds.aliyuncs.com:3306/nku
+#spring.datasource.url=jdbc:mysql://rm-hp3cu2bv3w34t7o9i.mysql.huhehaote.rds.aliyuncs.com:3306/nku
+spring.datasource.url=jdbc:mysql://rm-hp3cu2bv3w34t7o9iso.mysql.huhehaote.rds.aliyuncs.com:3306/nku
 spring.datasource.username=root
 spring.datasource.password=Station2018
 
