section good release edit sync resolve by change=?true, add tab and search, add section tag

--- a/hiket-wx/app.json
+++ b/hiket-wx/app.json
@@ -12,7 +12,7 @@
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
+    "navigationBarBackgroundColor": "#FA4F7D",
     "navigationBarTitleText": "Hi! Ket",
     "navigationBarTextStyle": "black"
   },
