--- a/hiket/src/main/resources/application.properties
+++ b/hiket/src/main/resources/application.properties
@@ -26,8 +26,8 @@ constants.appId=wx5fbbf4012eb3daa0
 constants.secret=4cb144225a7d4dcae2f5f4bd5ce214d6
 constants.weixinLoginUrl=https://api.weixin.qq.com/sns/jscode2session?appid=${constants.appId}&secret=${constants.secret}&js_code=%s&grant_type=authorization_code"
 constants.serverPort=${server.port}
-#constants.serverName=aliyun
-constants.serverName=bbs
+constants.serverName=aliyun
+#constants.serverName=bbs
 #constants.serverName=tenxun
 
 logging.file=/www/web/nk/log/hiket_${constants.serverName}_${server.port}.log
