--- a/script/nginx.conf
+++ b/script/nginx.conf
@@ -61,6 +61,10 @@ http {
     include /etc/nginx/conf.d/*.conf;
     include /etc/nginx/sites-enabled/*;
 
+    upstream mini{
+        server    aliyun.alumik.cn:5180;
+    }
+
     upstream user {
         server    127.0.0.1:8000 weight=5;
         server    127.0.0.1:8001 weight=5;
@@ -74,6 +78,12 @@ http {
         server    118.25.159.178:8003 weight=2;
         server    118.25.159.178:8004 weight=2;
         server    118.25.159.178:8005 weight=2;
+        server    39.106.179.8:8000 weight=2;
+        server    39.106.179.8:8001 weight=2;
+        server    39.106.179.8:8002 weight=2;
+        server    39.106.179.8:8003 weight=2;
+        server    39.106.179.8:8004 weight=2;
+        server    39.106.179.8:8005 weight=2;
     }
 
     upstream release {
@@ -98,6 +108,12 @@ http {
         server    118.25.159.178:8003 weight=2;
         server    118.25.159.178:8004 weight=2;
         server    118.25.159.178:8005 weight=2;
+        server    39.106.179.8:8000 weight=2;
+        server    39.106.179.8:8001 weight=2;
+        server    39.106.179.8:8002 weight=2;
+        server    39.106.179.8:8003 weight=2;
+        server    39.106.179.8:8004 weight=2;
+        server    39.106.179.8:8005 weight=2;
     }
 
     upstream operation {
@@ -113,6 +129,12 @@ http {
         server    118.25.159.178:8003 weight=2;
         server    118.25.159.178:8004 weight=2;
         server    118.25.159.178:8005 weight=2;
+        server    39.106.179.8:8000 weight=2;
+        server    39.106.179.8:8001 weight=2;
+        server    39.106.179.8:8002 weight=2;
+        server    39.106.179.8:8003 weight=2;
+        server    39.106.179.8:8004 weight=2;
+        server    39.106.179.8:8005 weight=2;
     }
 
     upstream search {
@@ -122,12 +144,18 @@ http {
         server    127.0.0.1:8003 weight=2;
         server    127.0.0.1:8004 weight=5;
         server    127.0.0.1:8005 weight=5;
-        server    118.25.159.178:8000 weight=1;
-        server    118.25.159.178:8001 weight=1;
-        server    118.25.159.178:8002 weight=1;
-        server    118.25.159.178:8003 weight=1;
-        server    118.25.159.178:8004 weight=1;
-        server    118.25.159.178:8005 weight=1;
+        server    118.25.159.178:8000 weight=2;
+        server    118.25.159.178:8001 weight=2;
+        server    118.25.159.178:8002 weight=2;
+        server    118.25.159.178:8003 weight=2;
+        server    118.25.159.178:8004 weight=2;
+        server    118.25.159.178:8005 weight=2;
+        server    39.106.179.8:8000 weight=2;
+        server    39.106.179.8:8001 weight=2;
+        server    39.106.179.8:8002 weight=2;
+        server    39.106.179.8:8003 weight=2;
+        server    39.106.179.8:8004 weight=2;
+        server    39.106.179.8:8005 weight=2;
     }
 
     upstream message {
@@ -143,6 +171,33 @@ http {
         server    118.25.159.178:8003 weight=1;
         server    118.25.159.178:8004 weight=1;
         server    118.25.159.178:8005 weight=1;
+        server    39.106.179.8:8000 weight=1;
+        server    39.106.179.8:8001 weight=1;
+        server    39.106.179.8:8002 weight=1;
+        server    39.106.179.8:8003 weight=1;
+        server    39.106.179.8:8004 weight=1;
+        server    39.106.179.8:8005 weight=1;
+    }
+
+    upstream browse {
+        server    127.0.0.1:8000 weight=1;
+        server    127.0.0.1:8001 weight=1;
+        server    127.0.0.1:8002 weight=1;
+        server    127.0.0.1:8003 weight=1;
+        server    127.0.0.1:8004 weight=1;
+        server    127.0.0.1:8005 weight=1;
+        server    118.25.159.178:8000 weight=1;
+        server    118.25.159.178:8001 weight=1;
+        server    118.25.159.178:8002 weight=1;
+        server    118.25.159.178:8003 weight=1;
+        server    118.25.159.178:8004 weight=1;
+        server    118.25.159.178:8005 weight=1;
+        server    39.106.179.8:8000 weight=1;
+        server    39.106.179.8:8001 weight=1;
+        server    39.106.179.8:8002 weight=1;
+        server    39.106.179.8:8003 weight=1;
+        server    39.106.179.8:8004 weight=1;
+        server    39.106.179.8:8005 weight=1;
     }
 
     server {
@@ -176,27 +231,56 @@ http {
         }
 
         location /user {
-            proxy_pass http://user;  
+            proxy_pass http://user;
+            proxy_connect_timeout       1;
+            proxy_read_timeout          1;
+            proxy_send_timeout          1;
         }
 
         location /release {
-            proxy_pass http://release;  
+            proxy_pass http://release;
+            proxy_connect_timeout       1;
+            proxy_read_timeout          1;
+            proxy_send_timeout          1;
         }
 
         location /favorite {
-            proxy_pass http://favorite;  
+            proxy_pass http://favorite;
+            proxy_connect_timeout       1;
+            proxy_read_timeout          1;
+            proxy_send_timeout          1;
         }
 
         location /operation {
-            proxy_pass http://operation;  
+            proxy_pass http://operation;
+            proxy_connect_timeout       1;
+            proxy_read_timeout          1;
+            proxy_send_timeout          1;
         }
 
         location /search {
-            proxy_pass http://search;  
+            proxy_pass http://search;
+            proxy_connect_timeout       1;
+            proxy_read_timeout          1;
+            proxy_send_timeout          1;
         }
 
         location /message {
-            proxy_pass http://message;  
+            proxy_pass http://message;
+            proxy_connect_timeout       1;
+            proxy_read_timeout          1;
+            proxy_send_timeout          1;
+        }
+
+        location /browse {
+            proxy_pass http://message;
+            proxy_connect_timeout       1;
+            proxy_read_timeout          1;
+            proxy_send_timeout          1;
+        }
+
+        location /mini-goals {
+            proxy_pass https://mini;
         }
 
         error_page 404 /404.html;
