--- a/hiket/src/main/resources/application.properties
+++ b/hiket/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://rm-hp3cu2bv3w34t7o9i.mysql.huhehaote.rds.aliyuncs.com:3306/nku
-spring.datasource.url=jdbc:mysql://rm-hp3cu2bv3w34t7o9iso.mysql.huhehaote.rds.aliyuncs.com:3306/nku
+spring.datasource.url=jdbc:mysql://rm-hp3cu2bv3w34t7o9i.mysql.huhehaote.rds.aliyuncs.com:3306/nku
+#spring.datasource.url=jdbc:mysql://rm-hp3cu2bv3w34t7o9iso.mysql.huhehaote.rds.aliyuncs.com:3306/nku
 spring.datasource.username=root
 spring.datasource.password=Station2018
 
@@ -26,8 +26,8 @@ constants.appId=wx5fbbf4012eb3daa0
 constants.secret=4cb144225a7d4dcae2f5f4bd5ce214d6
 constants.weixinLoginUrl=https://api.weixin.qq.com/sns/jscode2session?appid=${constants.appId}&secret=${constants.secret}&js_code=%s&grant_type=authorization_code"
 constants.serverPort=${server.port}
-#constants.serverName=aliyun
-constants.serverName=tenxun
+constants.serverName=aliyun
+#constants.serverName=tenxun
 #constants.serverName=caolia
 
 logging.file=/www/web/nk/log/hiket_${constants.serverName}_${server.port}.log
