--- a/script/nginx.conf
+++ b/script/nginx.conf
@@ -65,6 +65,10 @@ http {
         server    aliyun.alumik.cn:5180;
     }
 
+    upstream studentRegister{
+        server    127.0.0.1:8080 weight=1;
+    }
+
     upstream user {
         server    127.0.0.1:8000 weight=5;
         server    127.0.0.1:8001 weight=5;
@@ -232,51 +236,34 @@ http {
 
         location /user {
             proxy_pass http://user;
-            proxy_connect_timeout       1;
-            proxy_read_timeout          1;
-            proxy_send_timeout          1;
         }
 
         location /release {
             proxy_pass http://release;
-            proxy_connect_timeout       1;
-            proxy_read_timeout          1;
-            proxy_send_timeout          1;
         }
 
         location /favorite {
             proxy_pass http://favorite;
-            proxy_connect_timeout       1;
-            proxy_read_timeout          1;
-            proxy_send_timeout          1;
         }
 
         location /operation {
             proxy_pass http://operation;
-            proxy_connect_timeout       1;
-            proxy_read_timeout          1;
-            proxy_send_timeout          1;
         }
 
         location /search {
             proxy_pass http://search;
-            proxy_connect_timeout       1;
-            proxy_read_timeout          1;
-            proxy_send_timeout          1;
         }
 
         location /message {
             proxy_pass http://message;
-            proxy_connect_timeout       1;
-            proxy_read_timeout          1;
-            proxy_send_timeout          1;
         }
 
         location /browse {
             proxy_pass http://message;
-            proxy_connect_timeout       1;
-            proxy_read_timeout          1;
-            proxy_send_timeout          1;
+        }
+
+        location /user/studentRegister {
+            proxy_pass http://studentRegister;
         }
 
         location /mini-goals {
